--- a/current-training/programming/css/playground/exercices-background/bg-medium/style.css
+++ b/current-training/programming/css/playground/exercices-background/bg-medium/style.css
@@ -4,7 +4,7 @@ body {
     background-repeat: no-repeat;
 }
 
-#titre {
+h1 {
     margin-top: 7%;
     margin-bottom: 10%;
     font-family:Verdana, Geneva, Tahoma, sans-serif ;
@@ -31,7 +31,7 @@ div {
     padding-bottom: 20px;
 }
 
-#end-page {
+#banner {
     margin-top: 190px;
     padding: 20px;
     background: rgba(0, 0, 0, 0.9);
