--- a/current-training/programming/css/playground/exercices-formulaires/formulaire-medium/style.css
+++ b/current-training/programming/css/playground/exercices-formulaires/formulaire-medium/style.css
@@ -39,10 +39,13 @@ p {
     color: rgb(115, 115, 116);
 }
 
+select {
+    height: 30px;
+}
+
 .group-form {
     padding-bottom: 8px;
 }
-
 
 .btn {
     padding-top: 20px;
