--- a/current-training/programming/css/playground/exercice-positionnement/exercice-navbar-2-medium/style.css
+++ b/current-training/programming/css/playground/exercice-positionnement/exercice-navbar-2-medium/style.css
@@ -68,19 +68,104 @@ button:hover {
     color: rgb(22, 85, 56);
 }
 
-main {
-    text-align: center;
-    padding-top:15%;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: rgb(22, 85, 56);
-}
-
 h1 {
     font-size: 40px;
     margin-bottom: 30px;
 }
 
+#start-main {
+    margin-bottom: 15em;
+    text-align: center;
+    padding-top: 15%;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: rgb(22, 85, 56);
+}
+
 p {
     font-size: 12px;
     color: rgb(56, 56, 56);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.p-main {
+    margin-left: 175px;
+    padding-bottom: 10px;
+}
+
+.fond {
+    background-color: rgb(221, 249, 247);
+}
+
+.encadre {
+    margin-left: 10em;
+    margin-right: 10em;
+    margin-bottom: 5em;
+    ;
+    border-style: dashed;
+    border-color: rgb(170, 170, 170);
+}
+
+.contenu {
+
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.contenu-deux {
+    margin-left: ;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    color: rgb(103, 103, 103);
+    text-align: center;
+}
+
+.sous-titres {
+    margin-left: 7em;
+    margin-bottom: 30px;
+    color: rgb(52, 52, 52)
+}
+
+#services {
+    margin-left: 10em;
+    margin-right: 10em;
+    margin-bottom: 5em;
+    display: flex;
+    justify-content: space-around;
+    gap: 50px;
+}
+
+.box {
+    flex-direction: column;
+    text-align: center;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    background-color: rgb(221, 249, 247);
+    border-radius: 6px;
+    box-shadow: 4px 4px rgba(0, 0, 0, 0.2);
+}
+
+img {
+    display: inline;
+}
+
+h3 {
+    padding-top: 10px;
+    padding-bottom: 15px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: rgb(52, 52, 52);
+}
+
+footer {
+    background-color: rgb(221, 249, 247);
+    height: 60px;
+}
+
+#foot-text {
+    color: rgb(22, 85, 56);
+    display: flex;
+    justify-content: center;
+    padding-top: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
