--- a/current-training/programming/css/playground/exercice-positionnement/exercice-navbar-2-medium/style.css
+++ b/current-training/programming/css/playground/exercice-positionnement/exercice-navbar-2-medium/style.css
@@ -1,3 +1,6 @@
+* {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
 #container {
     position: fixed;
     width: 100%;
@@ -7,8 +10,10 @@
     height: 80px;
     align-items: center;
     background-color: rgb(221, 249, 247);
+    box-shadow: 0px 2px rgba(0, 0, 0, 0.2);
     padding-left: 130px;
     padding-right: 130px;
+    color: rgb(22, 85, 56);
 }
 
 #logo-style {
@@ -17,17 +22,7 @@
 
 img {
     height: 30px;
-}
-
-h2 {
-    padding-left: 5px;
-    color: rgb(22, 85, 56);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-nav {
-    color: rgb(22, 85, 56);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    display: inline;
 }
 
 ul {
@@ -68,96 +63,74 @@ button:hover {
     color: rgb(22, 85, 56);
 }
 
-h1 {
-    font-size: 40px;
-    margin-bottom: 30px;
-}
-
-#start-main {
+#top-main {
     margin-bottom: 15em;
     text-align: center;
-    padding-top: 15%;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding-top: 15em;
+}
+
+h1 {
+    font-size: 40px;
+    margin-top: 3em;
+    margin-bottom: 10px;
     color: rgb(22, 85, 56);
 }
 
 p {
     font-size: 12px;
-    color: rgb(56, 56, 56);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding-top: 20px;
 }
 
-.p-main {
-    margin-left: 175px;
-    padding-bottom: 10px;
+section {
+    margin-left: 15em;
+    margin-right: 15em;
+    padding-top: 3em;
+    padding-bottom: 3em;
 }
 
-.fond {
+h2, h3, p {
+    color: rgb(58, 58, 58);
+}
+
+.container {
+    display: flex;
+    justify-content: space-between;
+    gap: 50px;
+    padding-top: 30px;
+}
+
+.box {
+    box-shadow: 2px 2px rgba(0, 0, 0, 0.2);
+    background-color: rgb(221, 249, 247);
+    text-align: center;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    padding-left: 30px;
+    padding-right: 30px;
+    border-radius: 6px;
+}
+
+h3 {
+    padding-top: 15px;
+}
+
+.bg-color {
     background-color: rgb(221, 249, 247);
 }
 
-.encadre {
-    margin-left: 10em;
-    margin-right: 10em;
-    margin-bottom: 5em;
-    ;
+#case {
     border-style: dashed;
     border-color: rgb(170, 170, 170);
-}
-
-.contenu {
-
-    padding-top: 30px;
-    padding-bottom: 30px;
-}
-
-.contenu-deux {
-    margin-left: ;
+    background-color: white;
+    margin-top: 20px;
     padding-top: 30px;
     padding-bottom: 30px;
     color: rgb(103, 103, 103);
     text-align: center;
 }
 
-.sous-titres {
-    margin-left: 7em;
-    margin-bottom: 30px;
-    color: rgb(52, 52, 52)
-}
-
-#services {
-    margin-left: 10em;
-    margin-right: 10em;
-    margin-bottom: 5em;
-    display: flex;
-    justify-content: space-around;
-    gap: 50px;
-}
-
-.box {
-    flex-direction: column;
-    text-align: center;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-top: 40px;
-    padding-bottom: 40px;
-    background-color: rgb(221, 249, 247);
-    border-radius: 6px;
-    box-shadow: 4px 4px rgba(0, 0, 0, 0.2);
-}
-
-img {
-    display: inline;
-}
-
-h3 {
-    padding-top: 10px;
-    padding-bottom: 15px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: rgb(52, 52, 52);
-}
-
 footer {
+    box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.2);
     background-color: rgb(221, 249, 247);
     height: 60px;
 }
@@ -169,3 +142,4 @@ footer {
     padding-top: 20px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
