--- a/current-training/programming/css/playground/exercice-positionnement/exercice-navbar-2-medium/style.css
+++ b/current-training/programming/css/playground/exercice-positionnement/exercice-navbar-2-medium/style.css
@@ -82,8 +82,8 @@ p {
 }
 
 section {
-    margin-left: 15em;
-    margin-right: 15em;
+    padding-left: 15em;
+    padding-right: 15em;
     padding-top: 3em;
     padding-bottom: 3em;
 }
@@ -101,7 +101,7 @@ h2, h3, p {
 
 .box {
     box-shadow: 2px 2px rgba(0, 0, 0, 0.2);
-    background-color: rgb(221, 249, 247);
+    background-color: white;
     text-align: center;
     padding-top: 40px;
     padding-bottom: 40px;
@@ -118,7 +118,7 @@ h3 {
     background-color: rgb(221, 249, 247);
 }
 
-#case {
+.case {
     border-style: dashed;
     border-color: rgb(170, 170, 170);
     background-color: white;
