--- a/current-training/programming/css/playground/exercices-background/exercice-css-background-3-hard/style.css
+++ b/current-training/programming/css/playground/exercices-background/exercice-css-background-3-hard/style.css
@@ -105,6 +105,12 @@ p {
 
 .label-position {
     padding-bottom: 5px;
+    width: 450px;
+
+}
+
+input, textarea {
+    width: 100%;
 }
 
 #btn-submit {
@@ -113,4 +119,5 @@ p {
     border-color: rgb(65, 164, 65);
     border-radius: 4px;
     cursor: pointer;
+    width: 450px;
 }
