--- a/current-training/programming/css/playground/exercices-grid/exercice-grid-1-easy/style.css
+++ b/current-training/programming/css/playground/exercices-grid/exercice-grid-1-easy/style.css
@@ -1,7 +1,3 @@
-body {
-    width: 100%;
-}
-
 h1 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
@@ -11,28 +7,60 @@ h1 {
 }
 
 .grid-container {
+    max-width: 100%;
     display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
-    grid-template-rows: 25% 25% 25% 25%;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
     gap: 10px;
-    margin-left: 40px;
-    margin-right: 40px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
-.item1 {
-    grid-column: 1 / 3;
-    grid-row: 1 / 3;
+.img1 {
+    grid-column: 1 / span 2;
+    grid-row: 1 / span 2;
     border-radius: 6px;
 }
 
-.item2 {
-    grid-column: 3 / 5;
-    grid-row: 1 / 2;
+.img2 {
+    grid-column: 3 / span 2;
+    grid-row: 1;
     border-radius: 6px;
 }
 
-.item3 {
-    grid-column: 3 / 4;
-    grid-row: 2 / 3;
+.img3 {
+    grid-column: 3;
+    grid-row: 2;
     border-radius: 6px;
 }
+
+.img4 {
+    grid-column: 4;
+    grid-row: 2;
+    border-radius: 6px;
+}
+
+.img5 {
+    grid-column: 1;
+    grid-row: 3 / span 2 ;
+    border-radius: 6px;
+}
+
+.img6 {
+    grid-column: 2;
+    grid-row: 3;
+    border-radius: 6px;
+}
+
+.img7 {
+    grid-column: 2;
+    grid-row: 4;
+    border-radius: 6px;
+}
+
+.img8 {
+    grid-column: 3 / span 2;
+    grid-row: 3 / span 2;
+    border-radius: 6px;
+}
+
