--- a/current-training/programming/css/playground/exercices-grid/exercice-grid-1-easy/style.css
+++ b/current-training/programming/css/playground/exercices-grid/exercice-grid-1-easy/style.css
@@ -7,60 +7,57 @@ h1 {
 }
 
 .grid-container {
-    max-width: 100%;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: repeat(4, 300px);
+    grid-template-rows: repeat(4, 300px);
+    justify-content: center;
     gap: 10px;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-bottom: 30px;
+}
+
+img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 6px;
 }
 
 .img1 {
     grid-column: 1 / span 2;
     grid-row: 1 / span 2;
-    border-radius: 6px;
 }
 
 .img2 {
     grid-column: 3 / span 2;
     grid-row: 1;
-    border-radius: 6px;
 }
 
 .img3 {
     grid-column: 3;
     grid-row: 2;
-    border-radius: 6px;
 }
 
 .img4 {
     grid-column: 4;
     grid-row: 2;
-    border-radius: 6px;
 }
 
 .img5 {
     grid-column: 1;
     grid-row: 3 / span 2 ;
-    border-radius: 6px;
 }
 
 .img6 {
     grid-column: 2;
     grid-row: 3;
-    border-radius: 6px;
 }
 
 .img7 {
     grid-column: 2;
     grid-row: 4;
-    border-radius: 6px;
 }
 
 .img8 {
     grid-column: 3 / span 2;
     grid-row: 3 / span 2;
-    border-radius: 6px;
 }
-
