--- a/current-training/programming/css/playground/exercices-grid/exercice-grid-2-medium/style.css
+++ b/current-training/programming/css/playground/exercices-grid/exercice-grid-2-medium/style.css
@@ -1,15 +1,20 @@
 body {
     display: grid;
     width: 1650px;
-    height: 1400px;
+    height: 1350px;
     justify-content: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    grid-template-columns: 200px 1fr 200px;
-    grid-template-rows: 60px 1fr 250px;
+    grid-template-columns: 250px 1fr 250px;
+    grid-template-rows: 70px 1fr 250px;
+}
+
+p {
+    font-size: small;
 }
 
 /* Début header */
 header {
+    display: flex;
     grid-column: 1 / 4;
     grid-row: 1;
     padding-left: 30px;
@@ -18,11 +23,11 @@ header {
     background: rgb(58, 77, 111);
 }
 
-img {
+header img {
     height: 30px;
 }
 
-#marque {
+.marque {
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     color: white;
     padding-left: 5px;
@@ -32,12 +37,27 @@ img {
 /* Début nav */
 nav {
     background: rgb(242, 230, 230);
-    padding-top: 50px;
+    padding-top: 70px;
 }
 
-a {
+nav a {
+    display: flex;
+    text-align: left;
     text-decoration: none;
     color: rgb(61, 58, 58);
+    font-size: small;
+    margin-bottom: 30px;
+    margin-right: 50px;
+    margin-left: 20px;
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 4px;
+}
+
+nav a:hover {
+    background-color: rgb(81, 212, 170);
+    color: white;
 }
 /* Fin nav */
 
@@ -45,14 +65,148 @@ a {
 main {
     grid-column: 2;
     grid-row: 2;
+    text-align: left;
+    padding-top: 5%;
+    padding-left: 20%;
+    padding-right: 20%;
 }
+
+main h2 {
+    color: rgb(55, 55, 55);
+}
+
+main li {
+    font-size: small;
+    color: rgb(71, 71, 71);
+}
+
+main div {
+    padding-bottom: 40px;
+}
+
+main h3 {
+    padding-bottom: 5px;
+    color: rgb(49, 49, 49);
+    font-size: medium;
+}
+
+main p {
+    padding-bottom: 10px;
+    line-height: 20px;
+    color: rgb(71, 71, 71);
+}
+
+main section {
+    display: flex;
+    margin-bottom: 30px;
+}
+
+
+main button {
+    margin-left: 250px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-size: small;
+    background-color: rgb(81, 212, 170);
+    border-color: rgb(81, 212, 170);
+    border-radius: 4px;
+    color: white;
+    cursor: pointer;
+}
+
+main button:hover {
+    background-color: rgb(0, 128, 113);
+    color: black;
+}
+
 /* Fin main */
 
 /* Début sidebar */
 #sidebar {
+    width: 100%;
     grid-column: 3;
     grid-row: 2;
-    background: rgb(241, 233, 233)
+    background: rgb(241, 233, 233);
+    text-align: left;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 55px;
+}
+
+#sidebar div {
+    padding-bottom: 20px;
+    border-bottom: solid 1px rgb(192, 192, 192);
+    padding-top: 20px;
+}
+
+#sidebar h3 {
+    padding-bottom: 5px;
+    color: rgb(49, 49, 49);
+    font-size: medium;
+}
+
+#sidebar p {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    line-height: 20px;
+    color: rgb(71, 71, 71);
+}
+
+input {
+    margin-top: 10px;
+    width: 100%;
+    padding-left: 5px;
+    font-size: small;
+}
+
+#sidebar button {
+    width: 100%;
+    margin-top: 5px;
+    margin-bottom: 20px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-size: small;
+    background-color: rgb(81, 212, 170);
+    border-color: rgb(81, 212, 170);
+    border-radius: 4px;
+    color: white;
+    cursor: pointer;
+}
+
+#sidebar button:hover {
+    background-color: rgb(0, 128, 113);
+    color: black;
+}
+
+#catégories h3 {
+    margin-bottom: 10px;
+}
+#catégories p {
+    border: solid 1px rgb(71, 71, 71);
+    border-radius: 4px;
+    margin-bottom: 3px;
+    padding-left: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-right: 5px;
+}
+
+#catégories a {
+    display: inline;
+    font-size: small;
+    color: rgb(71, 71, 71);
+    background-color: white;
+    text-decoration: none;
+    line-height: 40px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border: solid 1px rgb(71, 71, 71);
+    border-radius: 4px;
 }
 /* Fin sidebar */
 
@@ -62,4 +216,53 @@ footer {
     grid-row: 3;
     background: rgb(58, 77, 111);
 }
+
+footer img {
+    height: 25px;
+    display: inline;
+}
+
+footer section {
+    display: flex;
+    text-align: left;
+    justify-content: start;
+    gap: 210px;
+    margin-left: 20px;
+}
+
+#footer-marque {
+    display: flex;
+    margin-top: 20px;
+    margin-bottom: 15px;
+}
+
+footer h4 {
+    color: white;
+    font-size: 15px;
+    margin-top: 20px;
+    margin-bottom: 15px;
+}
+
+footer p, a {
+    color: grey;
+}
+
+footer a {
+    display: block;
+    text-decoration: none;
+    font-size: small;
+    padding-bottom: 10px;
+}
+
+#footer-end {
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 20px;
+    border-top: solid 1px grey;
+    padding-top: 20px;
+    text-align: center;
+    color: grey;
+}
+
+
 /* Fin footer */
