--- a/current-training/programming/css/playground/exercices-grid/exercice-grid-2-medium/style.css
+++ b/current-training/programming/css/playground/exercices-grid/exercice-grid-2-medium/style.css
@@ -1,11 +1,11 @@
 body {
     display: grid;
-    width: 100%;
+    width: 100vw;
     min-height: 100vh;
     justify-content: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    grid-template-columns: 250px 1fr 250px;
-    grid-template-rows: 70px 1fr 250px;
+    grid-template-columns: 15% 1fr 15%;
+    grid-template-rows: 70px 1fr 20%;
     grid-template-areas: 
     'header header header'
     'nav main sidebar'
@@ -22,20 +22,16 @@ header {
     display: flex;
     grid-column: 1 / 4;
     grid-row: 1;
-    padding-left: 30px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-left: 1.8rem;
+    padding-top: 1.2rem;
+    padding-bottom: 1.2rem;
     background: rgb(58, 77, 111);
-}
-
-header img {
-    height: 30px;
 }
 
 .marque {
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     color: white;
-    padding-left: 5px;
+    padding-left: 0.3rem;
 }
 /* ----- HEADER ----- */
 
@@ -43,28 +39,31 @@ header img {
 nav {
     display: flex;
     flex-direction: column;
+    align-items:flex-start;
     grid-area: nav;
     width: 100%;
     background: rgb(242, 230, 230);
-    padding-top: 70px;
+    padding-top: 4rem;
 }
 
 nav a {
+    width: 80%;
+    margin-left: 1.8rem;
+    padding-left: 0.6rem;
     text-decoration: none;
     color: rgb(61, 58, 58);
-    font-size: small;
-    margin-bottom: 30px;
-    margin-right: 50px;
-    margin-left: 20px;
-    padding-left: 10px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    font-size: 0.8rem;
+    margin-bottom: 1.8rem;
+    padding-top: 0.6rem;
+    padding-bottom: 0.6rem;
     border-radius: 4px;
 }
 
 nav a:hover {
     background-color: rgb(81, 212, 170);
     color: white;
+    width: 80%;
+    padding-left: 0.6rem;
 }
 /* ----- NAV ----- */
 
@@ -77,6 +76,7 @@ main {
     padding-top: 5%;
     padding-left: 20%;
     padding-right: 20%;
+
 }
 
 main h2 {
@@ -89,24 +89,24 @@ main li {
 }
 
 main div {
-    padding-bottom: 40px;
+    padding-bottom: 2.5rem;
 }
 
 main h3 {
-    padding-bottom: 5px;
+    padding-bottom: 0.5rem;
     color: rgb(49, 49, 49);
     font-size: medium;
 }
 
 main p {
-    padding-bottom: 10px;
-    line-height: 20px;
+    padding-bottom: 1rem;
+    line-height: 1.4rem;
     color: rgb(71, 71, 71);
 }
 
 main section {
     display: flex;
-    margin-bottom: 30px;
+    margin-bottom: 3rem;
 }
 
 #bouton {
@@ -115,10 +115,10 @@ main section {
 } 
 
 main button {
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
     font-size: small;
     background-color: rgb(81, 212, 170);
     border-color: rgb(81, 212, 170);
@@ -131,7 +131,6 @@ main button:hover {
     background-color: rgb(0, 128, 113);
     color: black;
 }
-
 /* ----- MAIN ----- */
 
 /* ----- SIDEBAR ----- */
@@ -142,44 +141,44 @@ main button:hover {
     grid-row: 2;
     background: rgb(241, 233, 233);
     text-align: left;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-top: 55px;
+    padding-left: 1.6rem;
+    padding-right: 1.6rem;
+    padding-top: 2rem;
 }
 
 #sidebar div {
-    padding-bottom: 20px;
+    padding-bottom: 2rem;
     border-bottom: solid 1px rgb(192, 192, 192);
-    padding-top: 20px;
+    padding-top: 2rem;
 }
 
 #sidebar h3 {
-    padding-bottom: 5px;
+    padding-bottom: 0.5rem;
     color: rgb(49, 49, 49);
     font-size: medium;
 }
 
 #sidebar p {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    line-height: 20px;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    line-height: 1.4rem;
     color: rgb(71, 71, 71);
 }
 
 input {
-    margin-top: 10px;
+    margin-top: 1rem;
     width: 100%;
-    padding-left: 5px;
+    padding-left: 0.5rem;
     font-size: small;
 }
 
 #sidebar button {
     width: 100%;
-    margin-top: 5px;
-    margin-bottom: 20px;
-    padding-bottom: 5px;
-    padding-left: 10px;
-    padding-right: 10px;
+    margin-top: 0.5rem;
+    padding-top: 0.3rem;
+    padding-bottom: 0.3rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
     font-size: small;
     background-color: rgb(81, 212, 170);
     border-color: rgb(81, 212, 170);
@@ -194,30 +193,29 @@ input {
 }
 
 #catégories h3 {
-    margin-bottom: 10px;
+    margin-bottom: 1rem;
 }
 #catégories p {
     border: solid 1px rgb(71, 71, 71);
     border-radius: 4px;
     margin-bottom: 3px;
-    padding-left: 5px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-right: 5px;
+    padding-left: 0.5rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-right: 0.5rem;
 }
 
 #catégories a {
-    display: inline;
     font-size: small;
     color: rgb(71, 71, 71);
     background-color: white;
     text-decoration: none;
-    line-height: 40px;
-    padding-left: 5px;
-    padding-right: 5px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    border: solid 1px rgb(71, 71, 71);
+    line-height: 2.5rem;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    border: 1px solid rgb(71, 71, 71);
     border-radius: 4px;
 }
 /* ----- SIDEBAR ----- */
@@ -232,7 +230,7 @@ footer {
 }
 
 footer img {
-    height: 25px;
+    height: 1.8rem;
     display: inline;
 }
 
@@ -241,20 +239,20 @@ footer section {
     text-align: left;
     justify-content: start;
     gap: 210px;
-    margin-left: 20px;
+    margin-left: 2rem;
 }
 
 #footer-marque {
     display: flex;
-    margin-top: 20px;
-    margin-bottom: 15px;
+    margin-top: 2rem;
+    margin-bottom: 1.6rem;
 }
 
 footer h4 {
     color: white;
-    font-size: 15px;
-    margin-top: 20px;
-    margin-bottom: 15px;
+    font-size: 1rem;
+    margin-top: 2rem;
+    margin-bottom: 1.6rem;
 }
 
 footer p, a {
@@ -265,19 +263,18 @@ footer a {
     display: block;
     text-decoration: none;
     font-size: small;
-    padding-bottom: 10px;
+    padding-bottom: 1rem;
 }
 
 #footer-end {
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-top: 20px;
-    border-top: solid 1px grey;
-    padding-top: 20px;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    margin-top: 0.5rem;
+    border-top: 1px solid grey;
+    padding-top: 1rem;
     text-align: center;
     color: grey;
 }
 /* ----- FOOTER ----- */
 
 /* ----- MEDIA QUERIES ----- */
-
