--- a/current-training/programming/css/playground/exercices-grid/exercice-grid-2-medium/style.css
+++ b/current-training/programming/css/playground/exercices-grid/exercice-grid-2-medium/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 p {
-    font-size: small;
+    font-size: 0.8rem;
 }
 
 /* ----- HEADER ----- */
@@ -74,8 +74,8 @@ main {
     grid-row: 2;
     text-align: left;
     padding-top: 5%;
-    padding-left: 20%;
-    padding-right: 20%;
+    padding-left: 6em;
+    padding-right: 6em;
 
 }
 
@@ -83,30 +83,34 @@ main h2 {
     color: rgb(55, 55, 55);
 }
 
+main ul {
+    padding-top: 2rem;
+}
+
 main li {
-    font-size: small;
+    font-size: 0.8rem;
     color: rgb(71, 71, 71);
 }
 
 main div {
-    padding-bottom: 2.5rem;
+    padding-bottom: 2rem;
+    padding-top: 0.5rem;
 }
 
 main h3 {
-    padding-bottom: 0.5rem;
+    padding-bottom: 1rem;
     color: rgb(49, 49, 49);
     font-size: medium;
 }
 
 main p {
-    padding-bottom: 1rem;
     line-height: 1.4rem;
     color: rgb(71, 71, 71);
 }
 
 main section {
     display: flex;
-    margin-bottom: 3rem;
+    flex-wrap: wrap;
 }
 
 #bouton {
@@ -115,11 +119,11 @@ main section {
 } 
 
 main button {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    font-size: small;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    padding-left: 1em;
+    padding-right: 1em;
+    font-size: 0.8rem;
     background-color: rgb(81, 212, 170);
     border-color: rgb(81, 212, 170);
     border-radius: 4px;
@@ -169,7 +173,7 @@ input {
     margin-top: 1rem;
     width: 100%;
     padding-left: 0.5rem;
-    font-size: small;
+    font-size: 0.8rem;
 }
 
 #sidebar button {
@@ -179,7 +183,7 @@ input {
     padding-bottom: 0.3rem;
     padding-left: 1rem;
     padding-right: 1rem;
-    font-size: small;
+    font-size: 0.8rem;
     background-color: rgb(81, 212, 170);
     border-color: rgb(81, 212, 170);
     border-radius: 4px;
@@ -206,7 +210,7 @@ input {
 }
 
 #catégories a {
-    font-size: small;
+    font-size: 0.8rem;
     color: rgb(71, 71, 71);
     background-color: white;
     text-decoration: none;
@@ -236,10 +240,11 @@ footer img {
 
 footer section {
     display: flex;
+    flex-wrap: wrap;
     text-align: left;
     justify-content: start;
-    gap: 210px;
-    margin-left: 2rem;
+    gap: 13.2rem;
+    margin-left: 1.5rem;
 }
 
 #footer-marque {
@@ -262,7 +267,7 @@ footer p, a {
 footer a {
     display: block;
     text-decoration: none;
-    font-size: small;
+    font-size: 0.8rem;
     padding-bottom: 1rem;
 }
 
@@ -277,4 +282,79 @@ footer a {
 }
 /* ----- FOOTER ----- */
 
-/* ----- MEDIA QUERIES ----- */
+/* ----- MEDIA QUERIES MOBILE-FIRST----- */
+@media screen and (max-width: 600px) {
+    body {
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    header {
+        width: 100%;
+        grid-column: 1 / 4;
+        grid-row: 1 / 2;
+    }
+
+    nav {
+        height: 8rem;
+        flex-direction: row;
+        grid-column: 1 / 4;
+        grid-row: 2 / 3;
+    }
+
+    main {
+        width: 100%;
+        grid-column: 1 / 4;
+        grid-row: 3 / 6;
+    }
+
+    #sidebar {
+        grid-column: 1 / 4;
+        grid-row: 6 / 10;
+    }
+
+    footer {
+        grid-column: 1 / 4;
+        grid-row: 10 / 14;
+    }
+}
+/* ----- MEDIA QUERIES MOBILE-FIRST----- */
+
+/* ----- MEDIA QUERIES TABLETTE ----- */
+@media screen and (max-width:768px) {
+    body {
+        max-width: 768px;
+        margin: 0 auto;
+    }
+
+    nav {
+        grid-column: 1 / 4;
+        grid-row: 2 / 3;
+        flex-direction: row;
+    }
+
+    main {
+         width: 70vw;
+         padding: 0 auto;
+         grid-column: 1 / 3;
+         grid-row: 3 / 10;
+    }
+
+    #sidebar {
+        width: 30vw;
+        grid-column: 3 / 4;
+        grid-row: 3 / 10;
+    }
+
+    footer {
+        grid-column: 1 / 4;
+        grid-row: 10 / 13;
+    }
+
+    footer section {
+        margin-left: 0;
+        justify-content: space-around;
+        gap: 1rem;
+    }
+}
+/* ----- MEDIA QUERIES TABLETTE ----- */
