--- a/current-training/programming/css/playground/exercices-grid/exercice-grid-2-medium/style.css
+++ b/current-training/programming/css/playground/exercices-grid/exercice-grid-2-medium/style.css
@@ -73,10 +73,9 @@ main {
     grid-column: 2;
     grid-row: 2;
     text-align: left;
-    padding-top: 5%;
-    padding-left: 6em;
-    padding-right: 6em;
-
+    padding-top: 3rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
 }
 
 main h2 {
@@ -84,7 +83,7 @@ main h2 {
 }
 
 main ul {
-    padding-top: 2rem;
+    padding-top: 1rem;
 }
 
 main li {
@@ -326,11 +325,20 @@ footer a {
         max-width: 768px;
         margin: 0 auto;
     }
-
+    
     nav {
         grid-column: 1 / 4;
         grid-row: 2 / 3;
         flex-direction: row;
+        padding-top: 1rem;
+        padding-left: 1rem;
+        padding-bottom: 1rem;
+        padding-right: 1rem;
+    }
+
+    nav a {
+        font-weight: bold;
+        margin: 0 auto;
     }
 
     main {
@@ -338,6 +346,10 @@ footer a {
          padding: 0 auto;
          grid-column: 1 / 3;
          grid-row: 3 / 10;
+    }
+
+    main ul {
+        padding-left: 0.7rem;
     }
 
     #sidebar {
