--- a/current-training/programming/css/playground/exercices-grid/exercice-grid-2-medium/style.css
+++ b/current-training/programming/css/playground/exercices-grid/exercice-grid-2-medium/style.css
@@ -4,12 +4,12 @@ body {
     min-height: 100vh;
     justify-content: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    grid-template-columns: 15% 1fr 15%;
+    grid-template-columns: repeat(7, 1fr);
     grid-template-rows: 70px 1fr 20%;
     grid-template-areas: 
-    'header header header'
-    'nav main sidebar'
-    'footer footer footer';
+    'header header header header header header header'
+    'nav main main main main main sidebar'
+    'footer footer footer footer footer footer footer';
 }
 
 p {
@@ -20,7 +20,7 @@ p {
 header {
     grid-area: header;
     display: flex;
-    grid-column: 1 / 4;
+    grid-column: 1 / 8;
     grid-row: 1;
     padding-left: 1.8rem;
     padding-top: 1.2rem;
@@ -47,35 +47,29 @@ nav {
 }
 
 nav a {
-    width: 80%;
     margin-left: 1.8rem;
-    padding-left: 0.6rem;
     text-decoration: none;
     color: rgb(61, 58, 58);
     font-size: 0.8rem;
     margin-bottom: 1.8rem;
-    padding-top: 0.6rem;
-    padding-bottom: 0.6rem;
     border-radius: 4px;
 }
 
 nav a:hover {
     background-color: rgb(81, 212, 170);
     color: white;
-    width: 80%;
-    padding-left: 0.6rem;
 }
 /* ----- NAV ----- */
 
 /* ----- MAIN ----- */
 main {
     grid-area: main;
-    grid-column: 2;
+    grid-column: 2 / 7;
     grid-row: 2;
     text-align: left;
     padding-top: 3rem;
-    padding-left: 2rem;
-    padding-right: 2rem;
+    padding-left: 10rem;
+    padding-right: 10rem;
 }
 
 main h2 {
@@ -103,13 +97,19 @@ main h3 {
 }
 
 main p {
-    line-height: 1.4rem;
+    line-height: 1.2rem;
     color: rgb(71, 71, 71);
 }
 
-main section {
+#avantages {
     display: flex;
     flex-wrap: wrap;
+    gap: 10rem;
+}
+
+.box {
+    width: 35%;
+    
 }
 
 #bouton {
@@ -140,7 +140,7 @@ main button:hover {
 #sidebar {
     grid-area: sidebar;
     width: 100%;
-    grid-column: 3;
+    grid-column: 7;
     grid-row: 2;
     background: rgb(241, 233, 233);
     text-align: left;
@@ -164,7 +164,7 @@ main button:hover {
 #sidebar p {
     padding-top: 1rem;
     padding-bottom: 1rem;
-    line-height: 1.4rem;
+    line-height: 1.2rem;
     color: rgb(71, 71, 71);
 }
 
@@ -198,10 +198,11 @@ input {
 #catégories h3 {
     margin-bottom: 1rem;
 }
+
 #catégories p {
     border: solid 1px rgb(71, 71, 71);
     border-radius: 4px;
-    margin-bottom: 3px;
+    margin-bottom: 0.19rem;
     padding-left: 0.5rem;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
@@ -227,7 +228,7 @@ input {
 footer {
     grid-area: footer;
     width: 100%;
-    grid-column: 1 / 4;
+    grid-column: 1 / 8;
     grid-row: 3;
     background: rgb(58, 77, 111);
 }
@@ -256,7 +257,7 @@ footer h4 {
     color: white;
     font-size: 1rem;
     margin-top: 2rem;
-    margin-bottom: 1.6rem;
+    margin-bottom: 0.6rem;
 }
 
 footer p, a {
@@ -281,44 +282,6 @@ footer a {
 }
 /* ----- FOOTER ----- */
 
-/* ----- MEDIA QUERIES MOBILE-FIRST----- */
-@media screen and (max-width: 600px) {
-    body {
-        width: 100%;
-        margin: 0 auto;
-    }
-
-    header {
-        width: 100%;
-        grid-column: 1 / 4;
-        grid-row: 1 / 2;
-    }
-
-    nav {
-        height: 8rem;
-        flex-direction: row;
-        grid-column: 1 / 4;
-        grid-row: 2 / 3;
-    }
-
-    main {
-        width: 100%;
-        grid-column: 1 / 4;
-        grid-row: 3 / 6;
-    }
-
-    #sidebar {
-        grid-column: 1 / 4;
-        grid-row: 6 / 10;
-    }
-
-    footer {
-        grid-column: 1 / 4;
-        grid-row: 10 / 14;
-    }
-}
-/* ----- MEDIA QUERIES MOBILE-FIRST----- */
-
 /* ----- MEDIA QUERIES TABLETTE ----- */
 @media screen and (max-width:768px) {
     body {
@@ -326,26 +289,48 @@ footer a {
         margin: 0 auto;
     }
     
+    header {
+        grid-column: 1 / 5;
+    }
+
     nav {
-        grid-column: 1 / 4;
+        grid-column: 1 / 5;
         grid-row: 2 / 3;
         flex-direction: row;
-        padding-top: 1rem;
-        padding-left: 1rem;
-        padding-bottom: 1rem;
-        padding-right: 1rem;
+        justify-content: space-around;
+        padding: 0;
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;;
     }
 
     nav a {
         font-weight: bold;
         margin: 0 auto;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+
+    }
+
+    nav a:hover {
+        padding-left: 1rem;
+        padding-right: 1rem;
     }
 
     main {
-         width: 70vw;
+         width: 65vw;
          padding: 0 auto;
-         grid-column: 1 / 3;
+         grid-column: 1 / 4;
          grid-row: 3 / 10;
+         padding: 2rem;
+    }
+
+    #avantages {
+        gap: 0;
+    }
+
+    .box {
+        width: 100%;
     }
 
     main ul {
@@ -353,13 +338,14 @@ footer a {
     }
 
     #sidebar {
-        width: 30vw;
-        grid-column: 3 / 4;
+        width: 35vw;
+        grid-column: 4 / 5;
         grid-row: 3 / 10;
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
     }
 
     footer {
-        grid-column: 1 / 4;
+        grid-column: 1 / 5;
         grid-row: 10 / 13;
     }
 
