--- a/current-training/programming/css/playground/exercices-grid/exercice-grid-2-medium/style.css
+++ b/current-training/programming/css/playground/exercices-grid/exercice-grid-2-medium/style.css
@@ -39,6 +39,7 @@ header {
 nav {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     align-items:flex-start;
     grid-area: nav;
     width: 100%;
@@ -253,10 +254,10 @@ footer section div {
     width: 20%;
 }
 
-#footer-marque {
+#footer-ecodesign {
     display: flex;
     margin-top: 1rem;
-    margin-bottom: 1.6rem;
+    margin-bottom: 0.6rem;
 }
 
 footer h4 {
@@ -288,8 +289,8 @@ footer a {
 }
 /* ----- FOOTER ----- */
 
-/* ----- MEDIA QUERIES TABLETTE ----- */
-@media screen and (max-width:768px) {
+/* ----- MEDIA QUERIES ----- */
+@media screen and (max-width:768px) and (min-width: 600px) {
     body {
         max-width: 768px;
         margin: 0 auto;
@@ -362,6 +363,94 @@ footer a {
 
     #footer-end {
         margin-top: 0.6rem;
+        padding-bottom: 0.6rem;
     }
 }
-/* ----- MEDIA QUERIES TABLETTE ----- */
+/* ----- MEDIA QUERIES ----- */
+
+/* ----- MEDIA QUERIES ----- */
+@media screen and (max-width: 600px) and (min-width: 320px) {
+   body {
+        max-width: 600px;
+        margin: 0 auto;
+    }
+
+   header {
+        grid-column: 1 / 5;
+    }
+
+    nav {
+        grid-column: 1 / 5;
+        grid-row: 2;
+
+        flex-direction: row;
+        justify-content: space-evenly;
+        padding: 0;
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+    }
+
+    nav a {
+        font-size: 1em;
+        font-weight: bold;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+    }
+
+    nav a:hover {
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
+
+    main {
+        width: 100%;
+        padding: 0 auto;
+        grid-column: 1 / 5;
+        grid-row: 3 / 10;
+        padding: 2rem;
+    }
+
+    #avantages {
+        gap: 0;
+    }
+
+    .box {
+        width: 100%;
+    }
+
+   #sidebar {
+        width: 100vw;
+        grid-column: 1 / 5;
+        grid-row: 10 / 15;
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+    }
+
+    footer {
+        padding: 0;
+        grid-column: 1 / 5;
+        grid-row: 15 / 17;
+    }
+
+    footer section {
+        display: block;
+    }
+
+    footer section div {
+        width: 100%;
+        padding-bottom: 2rem;
+        padding-top: 1rem;
+    }
+
+    .border-bottom-div {
+        border-bottom: 1px solid grey;
+        width: 94%;
+    }
+
+    #footer-end {
+        padding-bottom: 0.6rem;
+        margin-left: 1.4rem;
+        margin-right: 1.9rem;
+    }
+}
+/* ----- MEDIA QUERIES ----- */
