--- a/current-training/programming/css/playground/exercices-animations/exercice-animation-medium-2/style.css
+++ b/current-training/programming/css/playground/exercices-animations/exercice-animation-medium-2/style.css
@@ -21,9 +21,11 @@ section {
 }
 
 .card {
-  border-radius: 6px;
+  max-width: 350px;
+  border-radius: 12px;
+  overflow: hidden;
   box-shadow: 0px 0px 15px #554668;
-  animation: slide 1s linear forwards;
+  animation: slide 0.8s ease-out forwards;
 }
 
 .card:nth-child(2) {
@@ -39,14 +41,21 @@ section {
 }
 
 .image {
+  overflow: hidden;
   display: block;
   width: 350px;
   height: 200px;
-  background-image: url(https://st4.depositphotos.com/36741118/39552/i/450/depositphotos_395526676-stock-photo-tarot-card-table-white-magic.jpg);
 }
 
-.image:hover {
-  transform: scale(1.5);
+img {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.image img:hover {
+  transform: scale(1.3);
+  transition: transform 0.3s ease;
 }
 
 .text {
@@ -58,6 +67,22 @@ section {
 h2 {
   color: #322740;
   padding-bottom: 15px;
+  width: fit-content;
+}
+
+h2::after {
+  content: "";
+  display: block;
+  width: 0%;
+  height: 3px;
+  background-color: #322740;
+  transform: scale(0);
+  transition: width 0.8s ease-in-out;
+}
+
+h2:hover::after {
+  transform: scale(1);
+  width: 100%;
 }
 
 p {
@@ -69,10 +94,10 @@ button {
   border-radius: 50px;
   background-color: #554668;
   border-color: #554668;
+  padding: 10px;
 }
 
 .btn-text {
-  padding: 10px;
   color: white;
   font-weight: bold;
 }
