maquette 2 media queries à faire

--- a/current-training/programming/maquette-2/style.css
+++ b/current-training/programming/maquette-2/style.css
@@ -373,3 +373,8 @@ footer {
 .overlay-blur::before {
   filter: blur(5px);
 }
+
+/*----- OVERLAY ----- */
+
+/*----- MEDIA QUERIES ----- */
+/*----- MEDIA QUERIES ----- */
