--- a/current-training/programming/maquette-1/style.css
+++ b/current-training/programming/maquette-1/style.css
@@ -21,7 +21,7 @@ body {
   max-width: 100vw;
   min-height: 100vh;
   font-size: var(--gap-m);
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: 400;
 }
 
@@ -77,7 +77,7 @@ li {
 }
 
 .link::after {
-  content: "";
+  content: '';
   display: block;
   width: 0%;
   height: 2px;
