--- a/current-training/programming/javascript/projet-morpion/style.css
+++ b/current-training/programming/javascript/projet-morpion/style.css
@@ -1,22 +1,39 @@
 body {
-  width: 100vw;
-  height: 100vh;
   font-family: 'League Script', cursive;
   font-weight: 400;
   font-style: normal;
-  justify-content: center;
+  background-color: rgb(214, 183, 243);
 }
 
 h1 {
   margin: 50px auto;
   text-align: center;
+  color: rgb(119, 60, 173);
 }
 
-.game-grid {
+#board {
+  width: 500px;
+  height: 500px;
   display: grid;
-  grid-template-rows: repeat(3, 150px);
-  grid-template-columns: repeat(3, 150px);
-  background-color: aqua;
-  border: 1px solid black;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 10px;
+  margin: 0 auto;
+}
+
+.cell {
+  background-color: white;
+  color: rgb(119, 60, 173);
+  font-size: 5rem;
+  display: flex;
   justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.announce {
+  margin-top: 50px;
+  text-align: center;
+  font-size: 3em;
+  color: rgb(173, 60, 163);
 }
